did necessay changes  files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="hi">
 <head>
   <meta charset="UTF-8" />
@@ -101,7 +100,7 @@
 </header>
 
 <div class="container">
-  <!-- Member 1 -->
+
   <div class="member-card">
     <img src="HPMISHRA.jpeg" alt="Hausila Prasad Mishra">
     <h2>हौसिला प्रसाद मिश्र</h2>
@@ -109,7 +108,6 @@
     <p>पेशा: सुबेदार मेजर (भारतीय सेना)</p>
   </div>
 
-  <!-- Member 2 -->
   <div class="member-card">
     <img src="seeta_devi.jpeg" alt="Seeta Devi">
     <h2>सीता देवी</h2>
@@ -117,47 +115,41 @@
     <p>गृहिणी</p>
   </div>
 
-  <!-- Member 3 -->
   <div class="member-card">
-    <img src="chandraman.jpeg" alt="Chandraman Mishra">
+    <img src="chandraman.jpeg" alt="Sabhajeet Mishra">
     <h2>सभाजीत मिश्र</h2>
     <p>जन्म: 05/07/1984</p>
     <p>निजी नौकरी</p>
   </div>
 
-  <!-- Member 4 -->
   <div class="member-card">
-    <img src="Mummy.jpeg" alt="Suman Devi">
+    <img src="mummy.jpeg" alt="Suman Devi">
     <h2>सुमन देवी</h2>
     <p>जन्म: 1995</p>
     <p>गृहिणी</p>
   </div>
 
-  <!-- Member 5 -->
   <div class="member-card">
-    <img src="indrajeet chacha.jpeg" alt="Indrajeet Mishra">
+    <img src="indrajeet_chacha.jpeg" alt="Indrajeet Mishra">
     <h2>इंद्रजीत मिश्र</h2>
     <p>जन्म: 05/07/1984</p>
     <p>सुबेदार मेजर (भारतीय सेना)</p>
   </div>
 
-  <!-- Member 6 -->
   <div class="member-card">
-    <img src="seema chachi.jpeg" alt="Seema Devi">
+    <img src="seema_chachi.jpeg" alt="Seema Devi">
     <h2>सीमा देवी</h2>
     <p>जन्म: 1995</p>
     <p>गृहिणी</p>
   </div>
 
-  <!-- Member 7 -->
   <div class="member-card">
-    <img src="you.jpg" alt="Sarvajeet Mishra">
+    <img src="you.jpeg" alt="Sarvajeet Mishra">
     <h2>सर्वजीत मिश्र</h2>
     <p>जन्म: 08/07/1986</p>
     <p>निजी नौकरी</p>
   </div>
 
-  <!-- Member 8 -->
   <div class="member-card">
     <img src="salendri.jpeg" alt="Salendri Mishra">
     <h2>सलेंद्री मिश्र</h2>
@@ -165,7 +157,6 @@
     <p>गृहिणी</p>
   </div>
 
-  <!-- Member 9 -->
   <div class="member-card">
     <img src="tota.jpeg" alt="Ravindra Mishra">
     <h2>रवींद्र मिश्र</h2>
@@ -173,62 +164,14 @@
     <p>अधिवक्ता (हाई कोर्ट, इलाहाबाद)</p>
   </div>
 
-  <!-- Member 10 -->
   <div class="member-card">
     <img src="soni.jpeg" alt="Soni Mishra">
     <h2>सोनी मिश्र</h2>
     <p>जन्म: 1995</p>
     <p>गृहिणी</p>
   </div>
+
 </div>
 
-=======
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Profile Page with Forest Animation</title>
-  <link rel="stylesheet" href="Website_css1.css" />
-</head>
-<body>
-
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="login.html">Login</a></li>
-      <li><a href="signup.html">Signup</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!-- Profile Section -->
-  <!-- Profile Section -->
-<div class="container">
-  <div class="profile">
-    <div class="profile-info">
-      <h1>Priyam mishra </h1>
-      <p><strong>Mobile:</strong> 6387964285 </p>
-      <p><strong>Address:</strong> Subhas nagar mulhai kheda lucknow</p>
-      <p id="description" class="hidden">
-        <strong>Description:</strong> A web developer with a passion for creating clean and user-friendly websites. Skilled in HTML, CSS, JavaScript, and responsive design.
-      </p>
-      <button id="toggleButton">Click me</button>
-    </div>
-    <img src="1000024255.jpg" alt="Profile Photo" />
-  </div>
-
-  <!-- Forest Animation -->
-  <div class="forest">
-    <div class="tree"></div>
-    <div class="tree" style="animation-delay: 0.3s;"></div>
-    <div class="tree" style="animation-delay: 0.6s;"></div>
-    <div class="tree" style="animation-delay: 0.9s;"></div>
-    <div class="tree" style="animation-delay: 1.2s;"></div>
-  </div>
-</div>
-
-
-  <script src="wedsite.js"></script>
->>>>>>> 82d9d8bb3899d575fbf8bc489ad7745fa927f931
 </body>
 </html>
