did necessay changes in suman files

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </div>
 
   <div class="member-card">
-    <img src="mummy.jpeg" alt="Suman Devi">
+    <img src="Mummy.jpeg" alt="Suman Devi">
     <h2>सुमन देवी</h2>
     <p>जन्म: 1995</p>
     <p>गृहिणी</p>
