did necessay changes in sarvajeet  files

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </div>
 
   <div class="member-card">
-    <img src="you.jpeg" alt="Sarvajeet Mishra">
+    <img src="sarvjeet.jpeg" alt="Sarvajeet Mishra">
     <h2>सर्वजीत मिश्र</h2>
     <p>जन्म: 08/07/1986</p>
     <p>निजी नौकरी</p>
